Update with contextually-matched service card images

--- a/index.html
+++ b/index.html
@@ -57,25 +57,25 @@
                 <p class="section-subtitle">Explore our comprehensive range of led mirror products solutions</p>
                 <div class="services-grid">
                 <div class="service-card">
-                    <img src="https://images.unsplash.com/photo-1461397932544-11132a69bf46?w=600&q=80" alt="Service" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
+                    <img src="https://images.unsplash.com/photo-1557243962-0a093922933f?w=600&q=80" alt="LED Vanity Mirrors" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
                     <h3>LED Vanity Mirrors</h3>
                     <p>Premium LED-lit vanity mirrors with adjustable brightness and color temperature.</p>
                     <a href="services.html" class="card-link">Learn More</a>
                 </div>
                 <div class="service-card">
-                    <img src="https://images.unsplash.com/photo-1461397932544-11132a69bf46?w=600&q=80" alt="Service" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
+                    <img src="https://images.unsplash.com/photo-1557243962-0a093922933f?w=600&q=80" alt="Smart Mirrors" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
                     <h3>Smart Mirrors</h3>
                     <p>Connected smart mirrors with integrated displays, lighting controls, and voice assistants.</p>
                     <a href="services.html" class="card-link">Learn More</a>
                 </div>
                 <div class="service-card">
-                    <img src="https://images.unsplash.com/photo-1461397932544-11132a69bf46?w=600&q=80" alt="Service" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
+                    <img src="https://images.unsplash.com/photo-1557243962-0a093922933f?w=600&q=80" alt="Commercial Mirrors" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
                     <h3>Commercial Mirrors</h3>
                     <p>Professional-grade LED mirrors for salons, hotels, and commercial restrooms.</p>
                     <a href="services.html" class="card-link">Learn More</a>
                 </div>
                 <div class="service-card">
-                    <img src="https://images.unsplash.com/photo-1461397932544-11132a69bf46?w=600&q=80" alt="Service" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
+                    <img src="https://images.unsplash.com/photo-1557243962-0a093922933f?w=600&q=80" alt="Custom Mirror Design" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
                     <h3>Custom Mirror Design</h3>
                     <p>Bespoke LED mirror designs tailored to specific dimensions and aesthetic requirements.</p>
                     <a href="services.html" class="card-link">Learn More</a>
